# tidy-mac

./: README.md  pyproject.toml
tests/: test_tidy.py
tidy/: main.yml
tidy/playbooks/: homebrew.yml
tidy/roles/elliotweiser.osx-command-line-tools/meta/: .galaxy_install_info
